manifests/manifestos-manual/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus-grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus.dtechdevops.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              number: 80
